add save to drive

--- a/emotion_classification.ipynb
+++ b/emotion_classification.ipynb
@@ -4,10 +4,12 @@
   "metadata": {
     "colab": {
       "provenance": [],
+      "toc_visible": true,
       "machine_shape": "hm",
       "gpuType": "L4",
       "mount_file_id": "1BlzfgZARtX86AAi6Hfiy64gwXTTAOifs",
-      "authorship_tag": "ABX9TyN4F7cPO/pdaYBjq0ZwFIgT"
+      "authorship_tag": "ABX9TyNzEKSlnlX6KN9G+OcbWyJE",
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
@@ -19,6 +21,16 @@
     "accelerator": "GPU"
   },
   "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/moka-co/twitter_emo_classification/blob/main/emotion_classification.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
     {
       "cell_type": "markdown",
       "source": [
@@ -238,7 +250,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 452
+          "height": 293
         },
         "id": "y7BtqGICYe4N",
         "outputId": "3b069e58-52b8-4bc1-8e7d-4f4e47c15c7d"
@@ -3314,7 +3326,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 631
+          "height": 728
         },
         "id": "M4cOiki7wKUS",
         "outputId": "565bcb9f-4a2c-472d-b057-0bb6201069b1"
@@ -3434,7 +3446,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 686
+          "height": 736
         },
         "id": "o-VozmHd3Ogu",
         "outputId": "9c28cb50-c77e-40e0-d4e1-87fc2b1965fd"
@@ -3744,7 +3756,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 249
+          "height": 374
         },
         "id": "Vz7ALvmoPoQ3",
         "outputId": "5e9d7a97-5be3-46ff-ed0f-b28e9f8d3ce1"
@@ -3817,7 +3829,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 327
+          "height": 495
         },
         "id": "Qj40_fT7Srz2",
         "outputId": "3f985b8b-c4bf-447c-aa65-11c9a4fc1415"
@@ -4273,7 +4285,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 328
+          "height": 496
         },
         "id": "bygXxU9DhfUV",
         "outputId": "b3a748a7-9429-4f50-f3d6-d3c9fa3c36ba"
@@ -4318,7 +4330,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 327
+          "height": 495
         },
         "id": "ydQjDSUxslg0",
         "outputId": "f3d4c5a6-6f48-4ebf-fc12-b97a3ebe77bd"
@@ -4363,7 +4375,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 327
+          "height": 495
         },
         "id": "O3JpD5Bht9VC",
         "outputId": "062882ed-27ee-4c7f-a569-e4265565be59"
@@ -4819,7 +4831,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 248
+          "height": 374
         },
         "id": "_w4cHiToQUix",
         "outputId": "276e1f0c-de39-4bfe-a8ff-7e05dff3766d"
@@ -4854,7 +4866,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 485
+          "height": 582
         },
         "outputId": "4dba78e2-2ab6-4bc3-b360-7c83e38d7595",
         "id": "65grmv6FjJOU"
@@ -4971,7 +4983,7 @@
         "id": "1YOP3SWjSV7w",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 918
+          "height": 571
         },
         "outputId": "8319f5df-2f6d-46fd-f131-87d9e7d63168"
       },
@@ -5538,7 +5550,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 918
+          "height": 571
         },
         "id": "G35qiX5KJgg6",
         "outputId": "f12aa3d7-416c-401c-ca2e-60ca016d1302"
@@ -6571,7 +6583,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 248
+          "height": 374
         },
         "outputId": "a144cb53-da24-4de5-d35d-2b8c80988666",
         "id": "crHlLU5sXuCz"
@@ -6635,7 +6647,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 623
+          "height": 720
         },
         "outputId": "c00ccea5-eb0a-4020-9421-a48f2d79ed37",
         "id": "nxDLw0WAX0aU"
@@ -6779,7 +6791,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 249
+          "height": 374
         },
         "id": "AaXDUvXvYA1q",
         "outputId": "29a4c184-7770-4c5a-f7a4-0e2bdefb8fa0"
@@ -6843,7 +6855,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 623
+          "height": 720
         },
         "id": "XU0zT8PBYG6C",
         "outputId": "b0b51821-6519-49c4-8faf-c0f2a62afa8f"
@@ -6980,6 +6992,56 @@
             "True Emotion: sadness\n",
             "Predicted Emotion: sadness\n"
           ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Save models to google drive\n",
+        "\n",
+        "# 1. Mount Google Drive\n",
+        "from google.colab import drive\n",
+        "import shutil\n",
+        "drive.mount('/content/drive')\n",
+        "\n",
+        "save_path = \"/content/drive/My Drive/Colab Notebooks/NLP Exam/\"\n",
+        "\n",
+        "dest = os.path.join(save_path, \"best_model_lstm_attn_v1_f1_0.9087.pt\")\n",
+        "shutil.copy(\"best_model_lstm_attn_v1_f1_0.9087.pt\", dest)\n",
+        "\n",
+        "dest = os.path.join(save_path, \"best_model_baseline_v1_f1_0.8613.pt\")\n",
+        "shutil.copy(\"best_model_baseline_v1_f1_0.8613.pt\", dest)\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 54
+        },
+        "id": "FeGseRDz7s0y",
+        "outputId": "9cc6db92-d033-45eb-f129-d6ee6ff2a7ff"
+      },
+      "execution_count": 173,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Drive already mounted at /content/drive; to attempt to forcibly remount, call drive.mount(\"/content/drive\", force_remount=True).\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'/content/drive/My Drive/Colab Notebooks/NLP Exam/best_model_baseline_v1_f1_0.8613.pt'"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 173
         }
       ]
     }
