add a script for merging data and instructions in README

--- a/src/preprocess_dataset.ipynb
+++ b/src/preprocess_dataset.ipynb
@@ -5,10 +5,20 @@
    "id": "bf12f43b",
    "metadata": {},
    "source": [
-    "# Database Assemble\n",
+    "# Database Merging\n",
+    "Please, use the `merge_data.py` script instead for obtaining the pre-processed dataset\n",
+    "\n",
+    "This notebook was used for scratching and showcasing the preprocess pipeline.\n",
     "\n",
     "## Twitter Emotion Classification Dataset\n",
-    "More information can be find at this link https://www.kaggle.com/datasets/aadyasingh55/twitter-emotion-classification-dataset"
+    "I combined together three datasets:\n",
+    "- The first dataset comes from Saravia et al., \"CARER: Contextualized Affect Representations for Emotion Recognition,\" EMNLP 2018. It is composed of about 416k rows of data, composed of a text (a tweet) and emotions row (which labels: sadness, joy, love, anger, fear and surprise)\n",
+    "- The first dataset comes from the SemEval Workshop of 2018 (see https://huggingface.co/datasets/SemEvalWorkshop/sem_eval_2018_task_1). This dataset has some differences in the labels, but i mapped them into the first dataset\n",
+    "- The last dataset comes from https://github.com/RoozbehBandpey/ELTEA17/tree/main. The label are a bit different so i had to do a mapping of the labels.\n",
+    "\n",
+    "The label distribution is practically invariate, it remains unbalanced, but this is documented later.\n",
+    "\n",
+    "At the end of this section i will have an unprocessed dataset of 425k rows, where each is labeled as one of the six labels from Saravia et al.,"
    ]
   },
   {
@@ -113,9 +123,7 @@
    "id": "46c23f8f",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "\n"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
