renamed script for clarity

--- a/src/merge_dataset_nb.ipynb
+++ b/src/merge_dataset_nb.ipynb
@@ -8,7 +8,7 @@
     "# Database Merging\n",
     "Please, use the `merge_data.py` script instead for obtaining the pre-processed dataset\n",
     "\n",
-    "This notebook was used for scratching and showcasing the preprocess pipeline.\n",
+    "This notebook was used for scratching and showcasing the merging pipeline.\n",
     "\n",
     "## Twitter Emotion Classification Dataset\n",
     "I combined together three datasets:\n",
