--- a/src/notebooks/merge_dataset_nb.ipynb
+++ b/src/notebooks/merge_dataset_nb.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": null,
    "id": "fdf9357e",
    "metadata": {},
    "outputs": [
@@ -107,7 +107,7 @@
     "import numpy as np\n",
     "\n",
     "# Read Parquet\n",
-    "df_kaggle = pd.read_parquet('../data/datasets/raw/train-00000-of-00001.parquet')\n",
+    "df_kaggle = pd.read_parquet('../../data/datasets/raw/train-00000-of-00001.parquet')\n",
     "\n",
     "# Add Emotions column for more clarity\n",
     "label_to_emotions = {0: \"sadness\", 1: \"joy\", 2: \"love\", 3: \"anger\", 4: \"fear\", 5: \"surprise\"}\n",
@@ -135,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": null,
    "id": "7d89894b",
    "metadata": {},
    "outputs": [
@@ -223,7 +223,7 @@
    ],
    "source": [
     "# Load semeval dataset\n",
-    "sem_eval_path_train = \"../data/datasets/raw/2018-E-c-En-train.txt\"\n",
+    "sem_eval_path_train = \"../../data/datasets/raw/2018-E-c-En-train.txt\"\n",
     "df_semeval = pd.read_csv(sem_eval_path_train, sep='\\t')\n",
     "\n",
     "df_semeval.head()\n",
@@ -385,7 +385,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": null,
    "id": "a74250d3",
    "metadata": {},
    "outputs": [
@@ -403,7 +403,7 @@
     }
    ],
    "source": [
-    "eltea_dataset_path = \"../data/datasets/raw/eltea_train.txt\"\n",
+    "eltea_dataset_path = \"../../data/datasets/raw/eltea_train.txt\"\n",
     "eltea_df = pd.read_csv(eltea_dataset_path, \n",
     "    sep='|', \n",
     "    header=None, \n",
