moved hyperparameters to config.toml

--- a/notebooks/train.ipynb
+++ b/notebooks/train.ipynb
@@ -1,6 +1,21 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "a290f181",
+   "metadata": {},
+   "source": [
+    "Note: i'm using colab for training, so i need to import my github repository and do all the steps here\n",
+    "\n",
+    "# Clone Repo\n",
+    "!git clone https://github.com/moka-co/twitter_emo_classification.git\n",
+    "\n",
+    "!cd twitter_emo_classification\n",
+    "\n",
+    "!pip install -e ."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 16,
    "id": "301e763b",
@@ -397,6 +412,28 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3ab32bf6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Load TOML configuration for Hyperparameters\n",
+    "import tomllib\n",
+    "load_path_toml = \"../config.toml\"\n",
+    "def load_config(path=load_path_toml):\n",
+    "    with open(path, \"rb\") as f:\n",
+    "        return tomllib.load(f)\n",
+    "\n",
+    "config = load_config()\n",
+    "\n",
+    "# Save shared configuration parameters \n",
+    "embedding_dim = config[\"project\"][\"embedding_dim\"]\n",
+    "output_dim = config[\"project\"][\"output_dim\"]\n",
+    "epoch_num = config[\"project\"][\"epoch_num\"]"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "b1afb7b5",
    "metadata": {},
@@ -411,14 +448,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "lr = config[\"model\"][\"baseline\"][\"lr\"]\n",
+    "wd = config[\"model\"][\"baseline\"][\"wd\"]\n",
+    "hidden_dim = config[\"model\"][\"baseline\"][\"hidden_dim\"]\n",
+    "\n",
     "# 1. Hyperparameters\n",
     "hyps = {\n",
-    "    \"embedding_dim\" : 300, # Embedding dimension\n",
+    "    \"embedding_dim\" : embedding_dim, # Embedding dimension\n",
     "    \"hidden_dim\" : 256, # Hidden dimension\n",
-    "    \"output_dim\" : 6, # Output dimension\n",
-    "    \"lr\" : 3e-4, # Learning rate\n",
-    "    \"wd\" : 1e-5, # weight decay\n",
-    "    \"epoch_num\" : 20,\n",
+    "    \"output_dim\" : output_dim, # Output dimension\n",
+    "    \"lr\" : lr, # Learning rate\n",
+    "    \"wd\" : wd, # weight decay\n",
+    "    \"epoch_num\" : epoch_num,\n",
     "    } # Number of training epoch\n",
     "\n",
     "# 2. Create obj glove weight matrix and model\n",
@@ -519,14 +560,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "lr = config[\"model\"][\"lstm\"][\"lr\"]\n",
+    "wd = config[\"model\"][\"lstm\"][\"wd\"]\n",
+    "hidden_dim = config[\"model\"][\"lstm\"][\"hidden_dim\"]\n",
+    "\n",
     "# 1. Hyperparameters\n",
     "hyps = {\n",
-    "    \"embedding_dim\" : 300, # Embedding dimension\n",
-    "    \"hidden_dim\" : 128, # Hidden dimension\n",
-    "    \"output_dim\" : 6, # Output dimension\n",
-    "    \"lr\" : 3e-4, # Learning rate\n",
-    "    \"wd\" : 1e-5, #Weight Decay\n",
-    "    \"epoch_num\" : 20} # Number of training epoch\n",
+    "    \"embedding_dim\" : embedding_dim, # Embedding dimension\n",
+    "    \"hidden_dim\" : hidden_dim, # Hidden dimension\n",
+    "    \"output_dim\" : output_dim, # Output dimension\n",
+    "    \"lr\" : lr, # Learning rate\n",
+    "    \"wd\" : wd-5, #Weight Decay\n",
+    "    \"epoch_num\" : epoch_num} # Number of training epoch\n",
     "\n",
     "# 2. Create obj glove weight matrix and model\n",
     "weights = load_glove_embeddings('glove.6B.300d.txt', word2idx, embedding_dim=hyps[\"embedding_dim\"])\n",
