--- a/notebooks/train.ipynb
+++ b/notebooks/train.ipynb
@@ -21,20 +21,23 @@
         "%cd /content/drive/MyDrive/MyLabs/"
       ],
       "metadata": {
-        "id": "OSdA3hA70mlL",
-        "outputId": "f78766dd-33bd-45bd-b5c5-0c49a27c406d",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "OSdA3hA70mlL",
+        "outputId": "9ef87ea9-b20d-4483-cb0f-8b025501f0a4"
       },
       "id": "OSdA3hA70mlL",
-      "execution_count": 1,
+      "execution_count": 14,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Mounted at /content/drive\n"
+            "[Errno 2] No such file or directory: '$HOME'\n",
+            "/content/drive/MyDrive/MyLabs/twitter_emo_classification\n",
+            "Drive already mounted at /content/drive; to attempt to forcibly remount, call drive.mount(\"/content/drive\", force_remount=True).\n",
+            "/content/drive/MyDrive/MyLabs\n"
           ]
         }
       ]
@@ -42,32 +45,33 @@
     {
       "cell_type": "code",
       "source": [
-        "!git clone https://github.com/moka-co/twitter_emo_classification.git\n",
-        "!git pull\n",
+        "if not os.path.exists(\"twitter_emo_classification\"):\n",
+        "  !git clone https://github.com/moka-co/twitter_emo_classification.git\n",
         "\n",
-        "%cd twitter_emo_classification"
+        "%cd twitter_emo_classification\n",
+        "!git pull"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "Rf41dId7s-ga",
-        "outputId": "14965465-cf37-4728-dd5e-cf7317e5179d"
+        "outputId": "9c6281b1-24ad-4b20-b060-b9912e3ffcbf"
       },
       "id": "Rf41dId7s-ga",
-      "execution_count": 7,
+      "execution_count": 17,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "Cloning into 'twitter_emo_classification'...\n",
-            "remote: Enumerating objects: 173, done.\u001b[K\n",
-            "remote: Counting objects: 100% (173/173), done.\u001b[K\n",
-            "remote: Compressing objects: 100% (139/139), done.\u001b[K\n",
-            "remote: Total 173 (delta 82), reused 94 (delta 24), pack-reused 0 (from 0)\u001b[K\n",
-            "Receiving objects: 100% (173/173), 23.43 MiB | 15.44 MiB/s, done.\n",
-            "Resolving deltas: 100% (82/82), done.\n",
+            "remote: Enumerating objects: 186, done.\u001b[K\n",
+            "remote: Counting objects: 100% (186/186), done.\u001b[K\n",
+            "remote: Compressing objects: 100% (151/151), done.\u001b[K\n",
+            "remote: Total 186 (delta 92), reused 97 (delta 25), pack-reused 0 (from 0)\u001b[K\n",
+            "Receiving objects: 100% (186/186), 23.43 MiB | 15.28 MiB/s, done.\n",
+            "Resolving deltas: 100% (92/92), done.\n",
             "fatal: not a git repository (or any parent up to mount point /content)\n",
             "Stopping at filesystem boundary (GIT_DISCOVERY_ACROSS_FILESYSTEM not set).\n",
             "/content/drive/MyDrive/MyLabs/twitter_emo_classification\n"
@@ -81,99 +85,98 @@
         "!pip install -e .\n",
         "\n",
         "!chmod +x scripts/run_scripts.sh\n",
-        "#!./scripts/run_scripts.sh"
+        "!./scripts/run_scripts.sh"
       ],
       "metadata": {
-        "id": "iyECOjL7tNaU"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "iyECOjL7tNaU",
+        "outputId": "35a7b845-c678-4828-d0d8-e6b20080cc21"
       },
       "id": "iyECOjL7tNaU",
-      "execution_count": 8,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "!python -m scripts.download_data\n"
-      ],
-      "metadata": {
-        "id": "niFEOVaZ40pr",
-        "outputId": "611458cb-6f9e-4a63-8c73-23879a3cf942",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
-      },
-      "id": "niFEOVaZ40pr",
-      "execution_count": 9,
+      "execution_count": 20,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Total_size= total_size\n",
-            "data/glove/glove.6B.zip: 100% 411G/411G [04:11<00:00, 3.43MiG/s]\n",
-            "Downloaded data/glove/glove.6B.zip succesfully\n",
-            "Extraction complete! Files are in: data/glove/\n",
-            "Successfully download and extracted Glove model under data/glove/ directory\n",
-            "Successfully downloaded Semeval Dataset under data/datasets/raw\n",
-            "Successfully downloaded ELTEA17 Dataset under data/datasets/raw\n",
-            "Warning: Looks like you're using an outdated `kagglehub` version (installed: 0.3.13), please consider upgrading to the latest version (0.4.1).\n",
-            "Downloading from https://www.kaggle.com/api/v1/datasets/download/aadyasingh55/twitter-emotion-classification-dataset?dataset_version_number=1...\n",
-            "100% 22.3M/22.3M [00:02<00:00, 9.31MB/s]\n",
-            "Extracting files...\n"
+            "Obtaining file:///content/drive/MyDrive/MyLabs/twitter_emo_classification\n",
+            "  Installing build dependencies ... \u001b[?25l\u001b[?25hdone\n",
+            "  Checking if build backend supports build_editable ... \u001b[?25l\u001b[?25hdone\n",
+            "  Getting requirements to build editable ... \u001b[?25l\u001b[?25hdone\n",
+            "  Preparing editable metadata (pyproject.toml) ... \u001b[?25l\u001b[?25hdone\n",
+            "Requirement already satisfied: torch in /usr/local/lib/python3.12/dist-packages (from emotion-classification==1.0) (2.9.0+cpu)\n",
+            "Requirement already satisfied: datasets in /usr/local/lib/python3.12/dist-packages (from emotion-classification==1.0) (4.0.0)\n",
+            "Requirement already satisfied: pandas in /usr/local/lib/python3.12/dist-packages (from emotion-classification==1.0) (2.2.2)\n",
+            "Requirement already satisfied: pyarrow in /usr/local/lib/python3.12/dist-packages (from emotion-classification==1.0) (18.1.0)\n",
+            "Requirement already satisfied: numpy in /usr/local/lib/python3.12/dist-packages (from emotion-classification==1.0) (2.0.2)\n",
+            "Requirement already satisfied: matplotlib in /usr/local/lib/python3.12/dist-packages (from emotion-classification==1.0) (3.10.0)\n",
+            "Requirement already satisfied: seaborn in /usr/local/lib/python3.12/dist-packages (from emotion-classification==1.0) (0.13.2)\n",
+            "Requirement already satisfied: scikit-learn in /usr/local/lib/python3.12/dist-packages (from emotion-classification==1.0) (1.6.1)\n",
+            "Requirement already satisfied: nltk in /usr/local/lib/python3.12/dist-packages (from emotion-classification==1.0) (3.9.1)\n",
+            "Requirement already satisfied: demoji in /usr/local/lib/python3.12/dist-packages (from emotion-classification==1.0) (1.1.0)\n",
+            "Requirement already satisfied: emoji in /usr/local/lib/python3.12/dist-packages (from emotion-classification==1.0) (2.15.0)\n",
+            "Requirement already satisfied: tqdm in /usr/local/lib/python3.12/dist-packages (from emotion-classification==1.0) (4.67.1)\n",
+            "Requirement already satisfied: kagglehub in /usr/local/lib/python3.12/dist-packages (from emotion-classification==1.0) (0.3.13)\n",
+            "Requirement already satisfied: filelock in /usr/local/lib/python3.12/dist-packages (from datasets->emotion-classification==1.0) (3.20.3)\n",
+            "Requirement already satisfied: dill<0.3.9,>=0.3.0 in /usr/local/lib/python3.12/dist-packages (from datasets->emotion-classification==1.0) (0.3.8)\n",
+            "Requirement already satisfied: requests>=2.32.2 in /usr/local/lib/python3.12/dist-packages (from datasets->emotion-classification==1.0) (2.32.4)\n",
+            "Requirement already satisfied: xxhash in /usr/local/lib/python3.12/dist-packages (from datasets->emotion-classification==1.0) (3.6.0)\n",
+            "Requirement already satisfied: multiprocess<0.70.17 in /usr/local/lib/python3.12/dist-packages (from datasets->emotion-classification==1.0) (0.70.16)\n",
+            "Requirement already satisfied: fsspec<=2025.3.0,>=2023.1.0 in /usr/local/lib/python3.12/dist-packages (from fsspec[http]<=2025.3.0,>=2023.1.0->datasets->emotion-classification==1.0) (2025.3.0)\n",
+            "Requirement already satisfied: huggingface-hub>=0.24.0 in /usr/local/lib/python3.12/dist-packages (from datasets->emotion-classification==1.0) (0.36.0)\n",
+            "Requirement already satisfied: packaging in /usr/local/lib/python3.12/dist-packages (from datasets->emotion-classification==1.0) (25.0)\n",
+            "Requirement already satisfied: pyyaml>=5.1 in /usr/local/lib/python3.12/dist-packages (from datasets->emotion-classification==1.0) (6.0.3)\n",
+            "Requirement already satisfied: contourpy>=1.0.1 in /usr/local/lib/python3.12/dist-packages (from matplotlib->emotion-classification==1.0) (1.3.3)\n",
+            "Requirement already satisfied: cycler>=0.10 in /usr/local/lib/python3.12/dist-packages (from matplotlib->emotion-classification==1.0) (0.12.1)\n",
+            "Requirement already satisfied: fonttools>=4.22.0 in /usr/local/lib/python3.12/dist-packages (from matplotlib->emotion-classification==1.0) (4.61.1)\n",
+            "Requirement already satisfied: kiwisolver>=1.3.1 in /usr/local/lib/python3.12/dist-packages (from matplotlib->emotion-classification==1.0) (1.4.9)\n",
+            "Requirement already satisfied: pillow>=8 in /usr/local/lib/python3.12/dist-packages (from matplotlib->emotion-classification==1.0) (11.3.0)\n",
+            "Requirement already satisfied: pyparsing>=2.3.1 in /usr/local/lib/python3.12/dist-packages (from matplotlib->emotion-classification==1.0) (3.3.2)\n",
+            "Requirement already satisfied: python-dateutil>=2.7 in /usr/local/lib/python3.12/dist-packages (from matplotlib->emotion-classification==1.0) (2.9.0.post0)\n",
+            "Requirement already satisfied: click in /usr/local/lib/python3.12/dist-packages (from nltk->emotion-classification==1.0) (8.3.1)\n",
+            "Requirement already satisfied: joblib in /usr/local/lib/python3.12/dist-packages (from nltk->emotion-classification==1.0) (1.5.3)\n",
+            "Requirement already satisfied: regex>=2021.8.3 in /usr/local/lib/python3.12/dist-packages (from nltk->emotion-classification==1.0) (2025.11.3)\n",
+            "Requirement already satisfied: pytz>=2020.1 in /usr/local/lib/python3.12/dist-packages (from pandas->emotion-classification==1.0) (2025.2)\n",
+            "Requirement already satisfied: tzdata>=2022.7 in /usr/local/lib/python3.12/dist-packages (from pandas->emotion-classification==1.0) (2025.3)\n",
+            "Requirement already satisfied: scipy>=1.6.0 in /usr/local/lib/python3.12/dist-packages (from scikit-learn->emotion-classification==1.0) (1.16.3)\n",
+            "Requirement already satisfied: threadpoolctl>=3.1.0 in /usr/local/lib/python3.12/dist-packages (from scikit-learn->emotion-classification==1.0) (3.6.0)\n",
+            "Requirement already satisfied: typing-extensions>=4.10.0 in /usr/local/lib/python3.12/dist-packages (from torch->emotion-classification==1.0) (4.15.0)\n",
+            "Requirement already satisfied: setuptools in /usr/local/lib/python3.12/dist-packages (from torch->emotion-classification==1.0) (75.2.0)\n",
+            "Requirement already satisfied: sympy>=1.13.3 in /usr/local/lib/python3.12/dist-packages (from torch->emotion-classification==1.0) (1.14.0)\n",
+            "Requirement already satisfied: networkx>=2.5.1 in /usr/local/lib/python3.12/dist-packages (from torch->emotion-classification==1.0) (3.6.1)\n",
+            "Requirement already satisfied: jinja2 in /usr/local/lib/python3.12/dist-packages (from torch->emotion-classification==1.0) (3.1.6)\n",
+            "Requirement already satisfied: aiohttp!=4.0.0a0,!=4.0.0a1 in /usr/local/lib/python3.12/dist-packages (from fsspec[http]<=2025.3.0,>=2023.1.0->datasets->emotion-classification==1.0) (3.13.3)\n",
+            "Requirement already satisfied: hf-xet<2.0.0,>=1.1.3 in /usr/local/lib/python3.12/dist-packages (from huggingface-hub>=0.24.0->datasets->emotion-classification==1.0) (1.2.0)\n",
+            "Requirement already satisfied: six>=1.5 in /usr/local/lib/python3.12/dist-packages (from python-dateutil>=2.7->matplotlib->emotion-classification==1.0) (1.17.0)\n",
+            "Requirement already satisfied: charset_normalizer<4,>=2 in /usr/local/lib/python3.12/dist-packages (from requests>=2.32.2->datasets->emotion-classification==1.0) (3.4.4)\n",
+            "Requirement already satisfied: idna<4,>=2.5 in /usr/local/lib/python3.12/dist-packages (from requests>=2.32.2->datasets->emotion-classification==1.0) (3.11)\n",
+            "Requirement already satisfied: urllib3<3,>=1.21.1 in /usr/local/lib/python3.12/dist-packages (from requests>=2.32.2->datasets->emotion-classification==1.0) (2.5.0)\n",
+            "Requirement already satisfied: certifi>=2017.4.17 in /usr/local/lib/python3.12/dist-packages (from requests>=2.32.2->datasets->emotion-classification==1.0) (2026.1.4)\n",
+            "Requirement already satisfied: mpmath<1.4,>=1.1.0 in /usr/local/lib/python3.12/dist-packages (from sympy>=1.13.3->torch->emotion-classification==1.0) (1.3.0)\n",
+            "Requirement already satisfied: MarkupSafe>=2.0 in /usr/local/lib/python3.12/dist-packages (from jinja2->torch->emotion-classification==1.0) (3.0.3)\n",
+            "Requirement already satisfied: aiohappyeyeballs>=2.5.0 in /usr/local/lib/python3.12/dist-packages (from aiohttp!=4.0.0a0,!=4.0.0a1->fsspec[http]<=2025.3.0,>=2023.1.0->datasets->emotion-classification==1.0) (2.6.1)\n",
+            "Requirement already satisfied: aiosignal>=1.4.0 in /usr/local/lib/python3.12/dist-packages (from aiohttp!=4.0.0a0,!=4.0.0a1->fsspec[http]<=2025.3.0,>=2023.1.0->datasets->emotion-classification==1.0) (1.4.0)\n",
+            "Requirement already satisfied: attrs>=17.3.0 in /usr/local/lib/python3.12/dist-packages (from aiohttp!=4.0.0a0,!=4.0.0a1->fsspec[http]<=2025.3.0,>=2023.1.0->datasets->emotion-classification==1.0) (25.4.0)\n",
+            "Requirement already satisfied: frozenlist>=1.1.1 in /usr/local/lib/python3.12/dist-packages (from aiohttp!=4.0.0a0,!=4.0.0a1->fsspec[http]<=2025.3.0,>=2023.1.0->datasets->emotion-classification==1.0) (1.8.0)\n",
+            "Requirement already satisfied: multidict<7.0,>=4.5 in /usr/local/lib/python3.12/dist-packages (from aiohttp!=4.0.0a0,!=4.0.0a1->fsspec[http]<=2025.3.0,>=2023.1.0->datasets->emotion-classification==1.0) (6.7.1)\n",
+            "Requirement already satisfied: propcache>=0.2.0 in /usr/local/lib/python3.12/dist-packages (from aiohttp!=4.0.0a0,!=4.0.0a1->fsspec[http]<=2025.3.0,>=2023.1.0->datasets->emotion-classification==1.0) (0.4.1)\n",
+            "Requirement already satisfied: yarl<2.0,>=1.17.0 in /usr/local/lib/python3.12/dist-packages (from aiohttp!=4.0.0a0,!=4.0.0a1->fsspec[http]<=2025.3.0,>=2023.1.0->datasets->emotion-classification==1.0) (1.22.0)\n",
+            "Building wheels for collected packages: emotion-classification\n",
+            "  Building editable for emotion-classification (pyproject.toml) ... \u001b[?25l\u001b[?25hdone\n",
+            "  Created wheel for emotion-classification: filename=emotion_classification-1.0-0.editable-py3-none-any.whl size=13558 sha256=98244a71651bd0f84cf4037589a91b0de291a532cdc9a4a127a1d830e585bb54\n",
+            "  Stored in directory: /tmp/pip-ephem-wheel-cache-izlc2gnv/wheels/2a/70/a0/a261162a5097e87ca2957fee86eae90e0b89c616c635194788\n",
+            "Successfully built emotion-classification\n",
+            "Installing collected packages: emotion-classification\n",
+            "  Attempting uninstall: emotion-classification\n",
+            "    Found existing installation: emotion-classification 1.0\n",
+            "    Uninstalling emotion-classification-1.0:\n",
+            "      Successfully uninstalled emotion-classification-1.0\n",
+            "Successfully installed emotion-classification-1.0\n"
           ]
         }
       ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "!git pull\n",
-        "!python -m scripts.merge_data\n",
-        "!ls -R data/datasets/process\n",
-        "#!python -m scripts.remove_outliers"
-      ],
-      "metadata": {
-        "id": "WlpOzX3S0U_Q",
-        "outputId": "e0d2cd30-7a0d-436f-c498-09c12fc171ce",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
-      },
-      "id": "WlpOzX3S0U_Q",
-      "execution_count": 12,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "remote: Enumerating objects: 7, done.\u001b[K\n",
-            "remote: Counting objects:  14% (1/7)\u001b[K\rremote: Counting objects:  28% (2/7)\u001b[K\rremote: Counting objects:  42% (3/7)\u001b[K\rremote: Counting objects:  57% (4/7)\u001b[K\rremote: Counting objects:  71% (5/7)\u001b[K\rremote: Counting objects:  85% (6/7)\u001b[K\rremote: Counting objects: 100% (7/7)\u001b[K\rremote: Counting objects: 100% (7/7), done.\u001b[K\n",
-            "remote: Compressing objects: 100% (1/1)\u001b[K\rremote: Compressing objects: 100% (1/1), done.\u001b[K\n",
-            "remote: Total 4 (delta 3), reused 4 (delta 3), pack-reused 0 (from 0)\u001b[K\n",
-            "Unpacking objects:  25% (1/4)\rUnpacking objects:  50% (2/4)\rUnpacking objects:  75% (3/4)\rUnpacking objects: 100% (4/4)\rUnpacking objects: 100% (4/4), 529 bytes | 9.00 KiB/s, done.\n",
-            "From https://github.com/moka-co/twitter_emo_classification\n",
-            "   5ea2ae5..a21edcf  main       -> origin/main\n",
-            "Updating 8f43c9f..a21edcf\n",
-            "error: Your local changes to the following files would be overwritten by merge:\n",
-            "\tscripts/run_scripts.sh\n",
-            "Please commit your changes or stash them before you merge.\n",
-            "Aborting\n",
-            "Filtered 591 rows out of 6838\n",
-            "Database successfully saved\n",
-            "ls: cannot access 'data/datasets/process': No such file or directory\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "0QfZujzB6oiD"
-      },
-      "id": "0QfZujzB6oiD",
-      "execution_count": null,
-      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -187,7 +190,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 25,
       "id": "301e763b",
       "metadata": {
         "id": "301e763b"
@@ -224,7 +227,7 @@
         "id": "a72HCTHTvG4x"
       },
       "id": "a72HCTHTvG4x",
-      "execution_count": null,
+      "execution_count": 26,
       "outputs": []
     },
     {
@@ -275,7 +278,7 @@
         "id": "4BXCy5S_vPdV"
       },
       "id": "4BXCy5S_vPdV",
-      "execution_count": null,
+      "execution_count": 27,
       "outputs": []
     },
     {
@@ -297,7 +300,7 @@
       ],
       "source": [
         "# Load vocabulary\n",
-        "vocabulary_path = \"../data/vocab.json\"\n",
+        "vocabulary_path = \"/data/vocab.json\"\n",
         "\n",
         "with open(vocabulary_path, 'r', encoding='utf-8') as f:\n",
         "    word2idx = json.load(f)\n",
