working train notebook

--- a/notebooks/train.ipynb
+++ b/notebooks/train.ipynb
@@ -228,7 +228,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": 25,
       "id": "301e763b",
       "metadata": {
         "id": "301e763b"
@@ -576,7 +576,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 21,
+      "execution_count": 36,
       "id": "3ab32bf6",
       "metadata": {
         "id": "3ab32bf6"
@@ -599,7 +599,14 @@
         "\n",
         "\n",
         "# Compute distributions\n",
-        "distributions=df['emotions'].value_counts(normalize=True)"
+        "distributions=df['emotions'].value_counts(normalize=True)\n",
+        "\n",
+        "# Create directory where to save models\n",
+        "if not os.path.exists(\"models\"):\n",
+        "  os.makedirs(\"models\")\n",
+        "\n",
+        "# Set glove path\n",
+        "glove_path = 'data/glove/glove.6B.300d.txt'"
       ]
     },
     {
@@ -614,25 +621,15 @@
     },
     {
       "cell_type": "code",
-      "source": [
-        "from src.models.EmoBaseline import EmoBaseline"
-      ],
-      "metadata": {
-        "id": "XUbneyFaAHZa"
-      },
-      "id": "XUbneyFaAHZa",
-      "execution_count": 22,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 23,
+      "execution_count": 32,
       "id": "a0e6dd2b",
       "metadata": {
         "id": "a0e6dd2b"
       },
       "outputs": [],
       "source": [
+        "from src.models.EmoBaseline import EmoBaseline\n",
+        "\n",
         "lr = config[\"model\"][\"baseline\"][\"lr\"]\n",
         "wd = config[\"model\"][\"baseline\"][\"wd\"]\n",
         "hidden_dim = config[\"model\"][\"baseline\"][\"hidden_dim\"]\n",
@@ -648,7 +645,7 @@
         "    } # Number of training epoch\n",
         "\n",
         "# 2. Create obj glove weight matrix and model\n",
-        "weights = load_glove_embeddings('data/glove/glove.6B.300d.txt', word2idx, embedding_dim=hyps[\"embedding_dim\"])\n",
+        "weights = load_glove_embeddings(glove_path, word2idx, embedding_dim=hyps[\"embedding_dim\"])\n",
         "model_base = EmoBaseline(len(word2idx), # Dict\n",
         "                                       hyps[\"embedding_dim\"],\n",
         "                                       hyps[\"hidden_dim\"],\n",
@@ -673,27 +670,31 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 24,
+      "execution_count": 33,
       "id": "5b8c6d53",
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 367
+          "base_uri": "https://localhost:8080/"
         },
         "id": "5b8c6d53",
-        "outputId": "1262fff7-fcc7-4a83-9277-5f9bee579317"
+        "outputId": "cbc3f1b7-f667-4add-c46a-7fe1d314203d"
       },
       "outputs": [
         {
-          "output_type": "error",
-          "ename": "NameError",
-          "evalue": "name 'f1_score' is not defined",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-            "\u001b[0;32m/tmp/ipython-input-4286231983.py\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     10\u001b[0m     \u001b[0;31m# Calls train and validate custom functions\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     11\u001b[0m     \u001b[0mtrain_loss\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtrain_acc\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtrain\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmodel_base\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtrain_loader\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdevice\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0moptimizer_base\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcriterion_base\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 12\u001b[0;31m     \u001b[0mval_loss\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mval_acc\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mf1_weighted\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mf1_macro\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtopk_acc\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mvalidate\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmodel_base\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtest_loader\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdevice\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcriterion_base\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     13\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     14\u001b[0m     \u001b[0;31m# Print metrics\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m/tmp/ipython-input-3695100295.py\u001b[0m in \u001b[0;36mvalidate\u001b[0;34m(model, test_loader, device, criterion)\u001b[0m\n\u001b[1;32m     98\u001b[0m   \u001b[0mval_acc\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m100\u001b[0m \u001b[0;34m*\u001b[0m \u001b[0mcorrect_val\u001b[0m \u001b[0;34m/\u001b[0m \u001b[0mtotal_val\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     99\u001b[0m   \u001b[0mtopk_acc\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m100\u001b[0m \u001b[0;34m*\u001b[0m \u001b[0mcorrect_topk\u001b[0m \u001b[0;34m/\u001b[0m \u001b[0mtotal_val\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 100\u001b[0;31m   \u001b[0mf1_weighted\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mf1_score\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mall_labels\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mall_preds\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0maverage\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'weighted'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    101\u001b[0m   \u001b[0mf1_macro\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mf1_score\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mall_labels\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mall_preds\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0maverage\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'macro'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    102\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mNameError\u001b[0m: name 'f1_score' is not defined"
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Epoch [1/20], Train Loss: 1.1096, Train Acc: 55.93%, Val Loss: 0.4311, Val Acc: 86.41%,  Top-2 Val Accuracy: 95.96%, Weighted F1-Score: 0.8654,  Macro F1-Score: 0.8247,  \n",
+            "Epoch [2/20], Train Loss: 0.3820, Train Acc: 87.50%, Val Loss: 0.3347, Val Acc: 88.30%,  Top-2 Val Accuracy: 96.62%, Weighted F1-Score: 0.8862,  Macro F1-Score: 0.8523,  \n",
+            "Epoch [3/20], Train Loss: 0.3175, Train Acc: 88.68%, Val Loss: 0.3131, Val Acc: 88.56%,  Top-2 Val Accuracy: 97.23%, Weighted F1-Score: 0.8883,  Macro F1-Score: 0.8573,  \n",
+            "Epoch [4/20], Train Loss: 0.2823, Train Acc: 89.35%, Val Loss: 0.3140, Val Acc: 88.77%,  Top-2 Val Accuracy: 97.93%, Weighted F1-Score: 0.8891,  Macro F1-Score: 0.8471,  \n",
+            "Epoch [5/20], Train Loss: 0.2629, Train Acc: 89.64%, Val Loss: 0.2686, Val Acc: 89.23%,  Top-2 Val Accuracy: 98.35%, Weighted F1-Score: 0.8942,  Macro F1-Score: 0.8586,  \n",
+            "Epoch [6/20], Train Loss: 0.2505, Train Acc: 89.77%, Val Loss: 0.3051, Val Acc: 88.30%,  Top-2 Val Accuracy: 97.68%, Weighted F1-Score: 0.8893,  Macro F1-Score: 0.8401,  \n",
+            "Epoch [7/20], Train Loss: 0.2393, Train Acc: 89.95%, Val Loss: 0.2533, Val Acc: 89.36%,  Top-2 Val Accuracy: 98.51%, Weighted F1-Score: 0.8965,  Macro F1-Score: 0.8627,  \n",
+            "Epoch [8/20], Train Loss: 0.2324, Train Acc: 89.95%, Val Loss: 0.2677, Val Acc: 88.85%,  Top-2 Val Accuracy: 98.06%, Weighted F1-Score: 0.8903,  Macro F1-Score: 0.8530,  \n",
+            "\n",
+            "------------------------------\n",
+            "Training manually interrupted\n"
           ]
         }
       ],
@@ -762,13 +763,15 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 38,
       "id": "83d01f8f",
       "metadata": {
         "id": "83d01f8f"
       },
       "outputs": [],
       "source": [
+        "from src.models.EmoLSTM import EmoLSTM\n",
+        "\n",
         "lr = config[\"model\"][\"lstm\"][\"lr\"]\n",
         "wd = config[\"model\"][\"lstm\"][\"wd\"]\n",
         "hidden_dim = config[\"model\"][\"lstm\"][\"hidden_dim\"]\n",
@@ -779,12 +782,12 @@
         "    \"hidden_dim\" : hidden_dim, # Hidden dimension\n",
         "    \"output_dim\" : output_dim, # Output dimension\n",
         "    \"lr\" : lr, # Learning rate\n",
-        "    \"wd\" : wd-5, #Weight Decay\n",
+        "    \"wd\" : wd, #Weight Decay\n",
         "    \"epoch_num\" : epoch_num} # Number of training epoch\n",
         "\n",
         "# 2. Create obj glove weight matrix and model\n",
-        "weights = load_glove_embeddings('glove.6B.300d.txt', word2idx, embedding_dim=hyps[\"embedding_dim\"])\n",
-        "model_lstm = EmotionClassifierLSTM(len(word2idx), # Vocab Size\n",
+        "weights = load_glove_embeddings(glove_path, word2idx, embedding_dim=hyps[\"embedding_dim\"])\n",
+        "model_lstm = EmoLSTM(len(word2idx), # Vocab Size\n",
         "                                   hyps[\"embedding_dim\"],\n",
         "                                   hyps[\"hidden_dim\"],\n",
         "                                   hyps[\"output_dim\"],\n",
@@ -810,12 +813,30 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 39,
       "id": "7e47e402",
       "metadata": {
-        "id": "7e47e402"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "7e47e402",
+        "outputId": "4301dd1a-d915-46da-8513-5b314fa943d5"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Epoch [1/20], Train Loss: 0.2132, Train Acc: 90.55%, Val Loss: 0.1377, Val Acc: 93.31%,  Top-2 Val Accuracy: 99.28%, Weighted F1-Score: 0.9349,  Macro F1-Score: 0.9078,  \n",
+            "Epoch [2/20], Train Loss: 0.1317, Train Acc: 93.56%, Val Loss: 0.1339, Val Acc: 93.41%,  Top-2 Val Accuracy: 99.48%, Weighted F1-Score: 0.9358,  Macro F1-Score: 0.9083,  \n",
+            "Epoch [3/20], Train Loss: 0.1238, Train Acc: 93.75%, Val Loss: 0.1317, Val Acc: 93.56%,  Top-2 Val Accuracy: 99.46%, Weighted F1-Score: 0.9375,  Macro F1-Score: 0.9101,  \n",
+            "\n",
+            "------------------------------\n",
+            "Training manually interrupted\n",
+            "------------------------------\n"
+          ]
+        }
+      ],
       "source": [
         "# Save F1-Score history, both weighted and macro\n",
         "history_lstm = {'weighted': [], 'macro': [], 'train_loss' : [], 'val_loss': []}\n",
@@ -851,7 +872,7 @@
         "    if val_loss < best_val_loss:\n",
         "        best_val_loss = val_loss\n",
         "        patience_counter = 0\n",
-        "        file_path = f\"./best_model_lstm_attn_v1_f1_{f1_macro:.4f}.pt\"\n",
+        "        file_path = f\"models/best_model_lstm_attn_v1_f1_{f1_macro:.4f}.pt\"\n",
         "        torch.save({\n",
         "          'epoch': epoch + 1,\n",
         "          'model_state_dict': model_lstm.state_dict(),\n",
