fixed hidden dim

--- a/notebooks/train.ipynb
+++ b/notebooks/train.ipynb
@@ -637,7 +637,7 @@
         "# 1. Hyperparameters\n",
         "hyps = {\n",
         "    \"embedding_dim\" : embedding_dim, # Embedding dimension\n",
-        "    \"hidden_dim\" : 256, # Hidden dimension\n",
+        "    \"hidden_dim\" : hidden_dim, # Hidden dimension\n",
         "    \"output_dim\" : output_dim, # Output dimension\n",
         "    \"lr\" : lr, # Learning rate\n",
         "    \"wd\" : wd, # weight decay\n",
